Opened 16 years ago

Closed 16 years ago

#3027 closed bug (fixed)

[GlTeapot] double click window tab and you won't get it back

Reported by: diver Owned by: axeld
Priority: high Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If you double click window tab of running GlTepot, you won't get it back using deskbar.
hrev28456 in VirtualBox.

Change History (4)

comment:1 by diver, 16 years ago

Summary: [GlTepot] double click window tab and you won't get it back[GlTeapot] double click window tab and you won't get it back

comment:2 by diver, 16 years ago

There is strange effect if you change workspace and get back.

comment:3 by axeld, 16 years ago

Component: ApplicationsServers/app_server
Priority: normalhigh

To complete what diver wanted to say: the strange effect is that GLTeapot will suddenly restart drawing to a supposedly hidden window. When that happens, the window is responsive again.

Before the workspaces switch, the GLTeapot window waits for a lock while having the window locked - same for GLDirectMode. This part seems to be a design problem of the GL stuff. The Charts application stays responsive, but would show the same strange effect. Furthermore, it won't draw again when shown again directly (you'll have to change some stuff before that happens).

So the main problems seems to be the app_server that does not correctly maintain the direct buffer connection for hidden windows. I would assume that the GL lock will vanish then as well (but we'll see about that).

comment:4 by korli, 16 years ago

Resolution: fixed
Status: newclosed

Should be fixed as of hrev30472.

Note: See TracTickets for help on using tickets.