* honors new frame size in the LockGL() method of the renderer, FrameResized() now notifies the renderer. * checks whether the rendered bitmap size matches the direct info size, if not, the renderer doesn't draw. * we don't lock the view looper anymore in LockGL(), this avoids deadlocks with FrameResized(). * lock drawing when modifying the direct connection info. * the renderer now locks the view looper with a timeout, as on resize the looper is locked and FrameResized called. * the bug #3027 is fixed.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30472 a95241bf-73f2-0310-859d-f6bbb57e9c96